--- a/sida5.html
+++ b/sida5.html
@@ -19,8 +19,9 @@
          </ul>
       </nav>
       <section>
-		<!--Klassen används för femte sidans videoklipp och för att kunna anpassa videklippet på sitt egna vis-->
-        <iframe class="video" src="https://www.youtube.com/embed/fcsvE1zv1ek"></iframe>
+	<audio controls autoplay>
+  	    <source src="pling-1.mp3" type="audio/mpeg">
+	</audio>
       </section>
       <main>
 		<form action="fil.html" method="POST">
