--- a/sida5.html
+++ b/sida5.html
@@ -40,7 +40,7 @@
 			<br>
 			<input type="radio" id="dålig" name="betyg" value="dålig">
 			<label for="dålig">Dålig</label>
-			<textarea rows="3" cols="15"></textarea>
+			<textarea rows="3" name="ljud" cols="15"></textarea>
 			<br>
 			<br>
 			<label>Vem var din favorit artist?</label> 
